--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
-aiogram
-openai
-requests
-pyautogui
-pynput
+aiofiles==24.1.0
+aiogram==3.18.0
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiosignal==1.3.2
+anyio==4.8.0
+attrs==25.1.0
+charset-normalizer==3.4.1
+evdev==1.9.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+openai==1.65.4
+propcache==0.3.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+pynput==1.7.8
+pyperclip==1.9.0
+PyScreeze==1.0.1
+python-xlib==0.33
+requests==2.32.3
+sniffio==1.3.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+yarl==1.18.3
